@@ -65,7 +65,7 @@ include_HEADERS = libelf.h gelf.h
 
 CLEANFILES = ${GENSRCS}
 
-dist_man3_MANS = elf.3						\
+notrans_dist_man3_MANS = elf.3							\
 	elf_begin.3						\
 	elf_cntl.3						\
 	elf_end.3						\
@@ -114,137 +114,138 @@ dist_man3_MANS = elf.3						\
 	gelf_update_ehdr.3					\
 	gelf_xlatetof.3  					
 
-man3_MANS = elf_errno.3						\
-	elf_flagarhdr.3						\
-	elf_flagehdr.3						\
-	elf_flagelf.3						\
-	elf_flagphdr.3						\
-	elf_flagscn.3						\
-	elf_flagshdr.3						\
-	elf_newdata.3						\
-	elf_rawdata.3						\
-	elf_ndxscn.3						\
-	elf_newscn.3						\
-	elf_nextscn.3						\
-	elf_setshstrndx.3					\
-	elf_openmemory.3					\
-	gelf_update_cap.3					\
-	gelf_update_dyn.3					\
-	gelf_update_move.3					\
-	gelf_update_rel.3					\
-	gelf_update_rela.3					\
-	gelf_update_sym.3					\
-	gelf_update_syminfo.3					\
-	gelf_update_symshndx.3					\
-	gelf_update_phdr.3					\
-	gelf_update_shdr.3					\
-	gelf_xlatetom.3						\
-	elf32_checksum.3					\
-	elf64_checksum.3					\
-	elf32_fsize.3						\
-	elf64_fsize.3						\
-	elf32_getehdr.3						\
-	elf64_getehdr.3						\
-	elf32_getphdr.3						\
-	elf64_getphdr.3						\
-	elf32_getshdr.3						\
-	elf64_getshdr.3						\
-	elf32_newehdr.3						\
-	elf64_newehdr.3						\
-	elf32_newphdr.3						\
-	elf64_newphdr.3						\
-	elf32_xlatetof.3					\
-	elf64_xlatetof.3					\
-	elf32_xlatetom.3					\
-	elf64_xlatetom.3					
+notrans_man3_MANS = elf_errno.3		\
+	elf_flagarhdr.3		\
+	elf_flagehdr.3		\
+	elf_flagelf.3		\
+	elf_flagphdr.3		\
+	elf_flagscn.3		\
+	elf_flagshdr.3		\
+	elf_newdata.3		\
+	elf_rawdata.3		\
+	elf_ndxscn.3		\
+	elf_newscn.3		\
+	elf_nextscn.3		\
+	elf_setshstrndx.3	\
+	elf_openmemory.3             \
+	gelf_update_cap.3		\
+	gelf_update_dyn.3		\
+	gelf_update_move.3	\
+	gelf_update_rel.3		\
+	gelf_update_rela.3	\
+	gelf_update_sym.3		\
+	gelf_update_syminfo.3	\
+	gelf_update_symshndx.3 \
+	gelf_update_phdr.3	\
+	gelf_update_shdr.3	\
+	gelf_xlatetom.3	\
+	elf32_checksum.3 	\
+	elf32_fsize.3 	\
+	elf32_getehdr.3	\
+	elf32_getphdr.3	\
+	elf32_getshdr.3	\
+	elf32_newehdr.3	\
+	elf32_newphdr.3	\
+	elf32_xlatetof.3	\
+	elf32_xlatetom.3	\
+	elf64_checksum.3 	\
+	elf64_fsize.3 	\
+	elf64_getehdr.3	\
+	elf64_getphdr.3	\
+	elf64_getshdr.3	\
+	elf64_newehdr.3	\
+	elf64_newphdr.3	\
+	elf64_xlatetof.3	\
+	elf64_xlatetom.3
 
 elf_errno.3: elf_errmsg.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_flagarhdr.3: elf_flagdata.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_flagehdr.3: elf_flagdata.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_flagelf.3: elf_flagdata.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_flagphdr.3: elf_flagdata.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_flagscn.3: elf_flagdata.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_flagshdr.3: elf_flagdata.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_newdata.3: elf_getdata.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_rawdata.3: elf_getdata.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_ndxscn.3: elf_getscn.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_newscn.3: elf_getscn.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_nextscn.3: elf_getscn.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_setshstrndx.3: elf_getshstrndx.3
-	cp $< $@
+	$(LN_S) $< $@
 elf_openmemory.3: elf_open.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_cap.3: gelf_getcap.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_dyn.3: gelf_getdyn.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_move.3: gelf_getmove.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_rel.3: gelf_getrel.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_rela.3: gelf_getrela.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_sym.3: gelf_getsym.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_syminfo.3: gelf_getsyminfo.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_symshndx.3: gelf_getsymshndx.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_phdr.3: gelf_update_ehdr.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_update_shdr.3: gelf_update_ehdr.3
-	cp $< $@
+	$(LN_S) $< $@
 gelf_xlatetom.3: gelf_xlatetof.3
-	cp $< $@
+	$(LN_S) $< $@
 
 elf32_checksum.3: gelf_checksum.3
-	cp $< $@
-elf64_checksum.3: gelf_checksum.3
-	cp $< $@
+	$(LN_S) $< $@
 elf32_fsize.3: gelf_fsize.3
-	cp $< $@
-elf64_fsize.3: gelf_fsize.3
-	cp $< $@
+	$(LN_S) $< $@
 elf32_getehdr.3: gelf_getehdr.3
-	cp $< $@
-elf64_getehdr.3: gelf_getehdr.3
-	cp $< $@
+	$(LN_S) $< $@
 elf32_getphdr.3: gelf_getphdr.3
-	cp $< $@
-elf64_getphdr.3: gelf_getphdr.3
-	cp $< $@
+	$(LN_S) $< $@
 elf32_getshdr.3: gelf_getshdr.3
-	cp $< $@
-elf64_getshdr.3: gelf_getshdr.3
-	cp $< $@
+	$(LN_S) $< $@
 elf32_newehdr.3: gelf_newehdr.3
-	cp $< $@
-elf64_newehdr.3: gelf_newehdr.3
-	cp $< $@
+	$(LN_S) $< $@
 elf32_newphdr.3: gelf_newphdr.3
-	cp $< $@
-elf64_newphdr.3: gelf_newphdr.3
-	cp $< $@
+	$(LN_S) $< $@
 elf32_xlatetof.3: gelf_xlatetof.3
-	cp $< $@
-elf64_xlatetof.3: gelf_xlatetof.3
-	cp $< $@
+	$(LN_S) $< $@
 elf32_xlatetom.3: gelf_xlatetof.3
-	cp $< $@
+	$(LN_S) $< $@
+
+elf64_checksum.3: gelf_checksum.3
+	$(LN_S) $< $@
+elf64_fsize.3: gelf_fsize.3
+	$(LN_S) $< $@
+elf64_getehdr.3: gelf_getehdr.3
+	$(LN_S) $< $@
+elf64_getphdr.3: gelf_getphdr.3
+	$(LN_S) $< $@
+elf64_getshdr.3: gelf_getshdr.3
+	$(LN_S) $< $@
+elf64_newehdr.3: gelf_newehdr.3
+	$(LN_S) $< $@
+elf64_newphdr.3: gelf_newphdr.3
+	$(LN_S) $< $@
+elf64_xlatetof.3: gelf_xlatetof.3
+	$(LN_S) $< $@
 elf64_xlatetom.3: gelf_xlatetof.3
-	cp $< $@
+	$(LN_S) $< $@
 
 libelf_convert.c: elf_types.m4 libelf_convert.m4
 libelf_fsize.c:	 elf_types.m4 libelf_fsize.m4
